Disable html_safe restriction in Rubocop
Closes #3

--- a/ruby/.rubocop.yml
+++ b/ruby/.rubocop.yml
@@ -35,6 +35,9 @@ Style/Lambda:
 Rails/Delegate:
   Enabled: false
 
+Rails/OutputSafety:
+  Enabled: false
+
 ################ Enable cops #############################
 Rails:
   Enabled: true
