Allow Rails methods that skip validations (#16)
Closes #4

--- a/ruby/.rubocop.yml
+++ b/ruby/.rubocop.yml
@@ -38,6 +38,9 @@ Rails/Delegate:
 Rails/OutputSafety:
   Enabled: false
 
+Rails/SkipsModelValidations:
+  Enabled: false
+
 ################ Enable cops #############################
 Rails:
   Enabled: true
