--- a/ruby/.rubocop.yml
+++ b/ruby/.rubocop.yml
@@ -26,9 +26,6 @@ Style/FormatString:
 Style/SpecialGlobalVars:
   Enabled: false
 
-Style/FrozenStringLiteralComment:
-  Enabled: false
-
 Style/Lambda:
   Enabled: false
 
@@ -46,6 +43,9 @@ Rails:
   Enabled: true
 
 Style/CollectionMethods:
+  Enabled: true
+
+Style/FrozenStringLiteralComment:
   Enabled: true
 
 Style/Send:
