--- a/stylelint/package.json
+++ b/stylelint/package.json
@@ -15,6 +15,7 @@
     "stylelint-config-recommended-scss": "^2.0.0",
     "stylelint-config-standard": "^17.0.0",
     "stylelint-order": "^0.7.0",
-    "stylelint-scss": "^2.1.0"
+    "stylelint-scss": "^2.1.0",
+    "stylelint": "^8.4.0"
   }
 }
