--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,21 +1,26 @@
 {
   "name": "@marsbased/marstyle-typescript",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "TSLint Rules for MarsBased",
   "main": "tslint.json",
   "repository": "http://github.com/MarsBased/marstyle/tree/master/typescript",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "tslint",
-    "marsbased",
-    "typescript",
-    "linter"
-  ],
+  "keywords": ["tslint", "marsbased", "typescript", "linter"],
   "author": "MarsBased",
+  "contributors": [
+    {
+      "name": "David GG",
+      "email": "david.garcia@marsbased.com"
+    }
+  ],
+  "bugs": {
+    "url": "https://github.com/MarsBased/marstyle/issues"
+  },
   "license": "MIT",
-  "dependencies": {
-    "tslint": "^5.8.0"
+  "peerDependencies": {
+    "tslint": "^5.10.0",
+    "typescript": "^2.1.0"
   }
 }
