[Rubocop] Exclude JBuilder from LambdaCall rule

--- a/ruby/.rubocop.yml
+++ b/ruby/.rubocop.yml
@@ -77,6 +77,10 @@ Style/PercentLiteralDelimiters:
      '%W': '[]'
      '%x': '()'
 
+Style/LambdaCall:
+  Exclude:
+    - '**/*.jbuilder'
+
 Layout/EmptyLinesAroundClassBody:
   EnforcedStyle: empty_lines
 
