Ruby - Accept Double Negation
Closes #21

--- a/ruby/.rubocop.yml
+++ b/ruby/.rubocop.yml
@@ -29,6 +29,9 @@ Style/SpecialGlobalVars:
 Style/Lambda:
   Enabled: false
 
+Style/DoubleNegation:
+  Enabled: false
+
 Rails/Delegate:
   Enabled: false
 
