[Rubocop] Disable predicate name rule (#49)
Closes #42

--- a/ruby/.rubocop.yml
+++ b/ruby/.rubocop.yml
@@ -27,6 +27,9 @@ Style/SpecialGlobalVars:
 Style/Lambda:
   Enabled: false
 
+Naming/PredicateName:
+  Enabled: false
+
 Style/DoubleNegation:
   Enabled: false
 
