--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@marsbased/marstyle-typescript",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "TSLint Rules for MarsBased",
   "main": "tslint.js",
   "repository": "http://github.com/MarsBased/marstyle/tree/master/typescript",
@@ -25,8 +25,7 @@
   },
   "license": "MIT",
   "peerDependencies": {
-    "tslint": "^5.10.0",
-    "typescript": "^2.2.0 || ^3.0.0"
+    "tslint": "^5.10.0"
   },
   "dependencies": {
     "tslint-config-prettier": "^1.18.0",
