--- a/eslint/package.json
+++ b/eslint/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@marsbased/eslint-config-marsbased",
-  "version": "1.0.1",
+  "version": "1.2",
   "description": "ESLint Rules for MarsBased",
   "main": "index.js",
   "repository": "https://github.com/MarsBased/marstyle/tree/master/eslint",
@@ -19,11 +19,12 @@
   },
   "homepage": "https://github.com/MarsBased/marstyle/tree/master/eslint",
   "dependencies": {
-    "@angular-eslint/eslint-plugin": "0.0.1-alpha.32",
-    "@typescript-eslint/eslint-plugin": "^3.3.0",
-    "@typescript-eslint/parser": "^3.3.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-jest": "^23.13.2"
+    "@angular-eslint/eslint-plugin": "0.8.0-beta.7",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3"
   },
   "peerDependencies": {
     "eslint": ">=6.6.0",
