--- a/eslint/package.json
+++ b/eslint/package.json
@@ -23,8 +23,10 @@
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
     "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.3"
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-react-hooks": "^4.2.0"
   },
   "peerDependencies": {
     "eslint": ">=6.6.0",
