--- a/eslint/package.json
+++ b/eslint/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@marsbased/eslint-config-marsbased",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "ESLint Rules for MarsBased",
   "main": "index.js",
   "repository": "https://github.com/MarsBased/marstyle/tree/master/eslint",
@@ -19,18 +19,18 @@
   },
   "homepage": "https://github.com/MarsBased/marstyle/tree/master/eslint",
   "dependencies": {
-    "@angular-eslint/eslint-plugin": "0.8.0-beta.7",
-    "@typescript-eslint/eslint-plugin": "^4.11.1",
-    "@typescript-eslint/parser": "^4.11.1",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-react": "^7.21.5",
+    "@angular-eslint/eslint-plugin": "4.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-jest": "^24.3.5",
+    "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0"
   },
   "peerDependencies": {
-    "eslint": ">=6.6.0",
-    "typescript": ">=7.2.0"
+    "eslint": "^7.20.0",
+    "typescript": ">=3.3.1 <4.3.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
