--- a/eslint/package.json
+++ b/eslint/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@marsbased/eslint-config-marsbased",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "description": "ESLint Rules for MarsBased",
   "main": "index.js",
   "repository": "https://github.com/MarsBased/marstyle/tree/master/eslint",
@@ -19,18 +19,18 @@
   },
   "homepage": "https://github.com/MarsBased/marstyle/tree/master/eslint",
   "dependencies": {
-    "@angular-eslint/eslint-plugin": "4.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "eslint-config-prettier": "^8.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.3.5",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "@angular-eslint/eslint-plugin": "15.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0"
   },
   "peerDependencies": {
-    "eslint": "^7.20.0",
-    "typescript": ">=3.3.1 <4.3.0"
+    "eslint": "^8.33.0",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
